k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthalliance-api-service
  labels:
    app: healthalliance-api
spec:
  type: LoadBalancer
  selector:
    app: healthalliance-api
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8000
